[REFACTOR] change system print to logger + replace collectors to stream to list for kupon controller